--- a/HTML/index(1).html
+++ b/HTML/index(1).html
@@ -59,6 +59,9 @@
 					background: #ffc300;
 					transition: width 2s, height 2s, background-color 2s, transform 4s;	
 				}
+				.display{
+					display: inline-block;
+				}
 			</style>
 		</head>
 		<body>
@@ -66,12 +69,15 @@
 			<div class='div2'></div>
 			<div class="div1">
 				<h1 class='a2'>Приложение ограничивает расходы на день и<br>помогает <span class='sp1'>перестать сливать зарплату на пустяки</span>.</h1>
-				<h3 class='a3'>Деньги не бесконечны<br>Приложение показывает,<br>сколько стоит потратить сегодня.<br>Считает новый бюджет на<br>ходу, пока вы вводите<br>трату.</h3>
-				<h3 class='a3'>Приложение показывает<br>правду: если потратите<br>слишком сильно сегодня,<br>уменьшит сумму<br>на завтра.</h3>
-				<h3 class='a3'>Приложение вряд ли поможет считать<br>статистику или вести подробный учёт.<br>Зато поможет сократить расходы<br>или дотянуть до зарплаты, если прижало.</h3>
-				<h3 class='a3'>Будем рады вопросам и предложениям:<br>
-					<span class='sp1'>Crimor16@mail.ru</span>
-				</h3>
+				<div class="display">
+					<h3 class='a3'>Деньги не бесконечны<br>Приложение показывает,<br>сколько стоит потратить сегодня.<br>Считает новый бюджет на<br>ходу, пока вы вводите<br>трату.</h3>
+					<h3 class='a3'>Приложение показывает<br>правду: если потратите<br>слишком сильно сегодня,<br>уменьшит сумму<br>на завтра.</h3>
+					<h3 class='a3'>Приложение вряд ли поможет считать<br>статистику или вести подробный учёт.<br>Зато поможет сократить расходы<br>или дотянуть до зарплаты, если прижало.</h3>
+					<h3 class='a3'>Будем рады вопросам и предложениям:<br>
+						<span class='sp1'>Crimor16@mail.ru</span>
+					</h3>
+				</div>
+				<img src="1.png" width="50%" height="10%"></img>
 				<div class='div2'></div>
 				<h2 class='a3'>Бесплатно — без рекламы<br>и внутренних<br>покупок.</h2>
 			</div>
