--- a/HTML/index(1).html
+++ b/HTML/index(1).html
@@ -2,70 +2,10 @@
 	<html>
 		<head>
 			<meta charset="UTF8">
-			<style>
-				body{
-					background-color: #1c1b1b;
-				}
-				.a1{
-					margin-left: 73%;
-					color: #eae1e1;
-				}
-				.link1{
-					text-decoration: none;
-					color: #ffa500;
-				}
-				.link1:hover{
-					color: #e2dc16;
-				}
-				.a2{
-					margin-top: 5%;
-					color: #eae1e1;
-				}
-				.a3{
-					margin-top: 3%;
-					color: #eae1e1;
-				}
-				.sp1{
-					color: #ffa500;
-				}
-				.div1{
-					margin-left: 15%;
-					margin-right: 15%;
-				}
-				.div2{
-					height: 1px;
-					width: 100%;
-					background-color: #726e6e; 
-				}
-				.div1 .div2{
-					width: 32.1%;
-					margin-top: 5%;
-				}
-				.button{
-					margin-left: 35%;
-					margin-top: 5%;
-					width: 30%;
-					height: 80px;
-					border-radius: 3px;
-					background-color: #ffa500;;
-					border: 1px solid #e2dc16;
-					outline: none;
-					box-shadow: 0 0 40px #0400ff;
-					cursor: pointer;
-					font-size: 30px;
-					color: blue;
-				}
-				.button:hover{
-					background: #ffc300;
-					transition: width 2s, height 2s, background-color 2s, transform 4s;	
-				}
-				.display{
-					display: inline-block;
-				}
-			</style>
+			<link rel="stylesheet" href="style 1.0 (1).css">
 		</head>
 		<body>
-			<h2 class='a1'><a href='file:///H:/SegrysProject/version%201.0%20(2.1).html' class='link1'>Зарегестрироваться</a> или <a href='file:///H:/SegrysProject/version%201.0%20(2.2).html' class='link1'>Войти в сеть</a>.</h2>
+			<h2 class='a1'><a href='version 1.0 (2.1).html' class='link1'>Зарегистрироваться</a> или <a href='version 1.0 (2.2).html' class='link1'>Войти в сеть</a>.</h2>
 			<div class='div2'></div>
 			<div class="div1">
 				<h1 class='a2'>Приложение ограничивает расходы на день и<br>помогает <span class='sp1'>перестать сливать зарплату на пустяки</span>.</h1>
@@ -81,9 +21,7 @@
 				<div class='div2'></div>
 				<h2 class='a3'>Бесплатно — без рекламы<br>и внутренних<br>покупок.</h2>
 			</div>
-			<a href='file:///H:/SegrysProject/version%201.0%20(2.1).html'><button class='button'>Начать экономить.</button></a>
-			<script>
-				'use strict'
-			</script>
+			<a href='version 1.0 (2.1).html'><button class='button'>Начать экономить.</button></a>
+			<script src="version 1.0 (1).js"></script>
 		</body>
 	</html>
