--- a/HTML/version 1.0 (3).html
+++ b/HTML/version 1.0 (3).html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<meta charset="UTF8">
-			<link rel="stylesheet" href="style 1.0 (3).css">
+			<link rel="stylesheet" href="\SegrysProject\CSS\style 1.0 (3).css">
 		</head>
 		<body>
 			<a href='version 1.0 (1).html'><button class='button-1'>Выйти из аккаунта.</button></a>
@@ -27,6 +27,6 @@
 				<textarea id="text-2" placeholder="Введите кол-во денег потраченные сегодня."></textarea>
 				<button id="button-3">Подтвердить.</button>
 			</div>
-			<script src="version 1.0 (3).js"></script>	
+			<script src="\SegrysProject\JS\version 1.0 (3).js"></script>	
 		</body>
 	</html>
