Update version 1.0 (3).html

--- a/HTML/version 1.0 (3).html
+++ b/HTML/version 1.0 (3).html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<meta charset="UTF8">
-			<link rel="stylesheet" href="\SegrysProject-master\CSS\style 1.0 (3).css">
+			<link rel="stylesheet" href="\SegrysProject-master.zip\CSS\style 1.0 (3).css">
 		</head>
 		<body>
 			<a href='version 1.0 (1).html'><button class='button-1'>Выйти из аккаунта.</button></a>
