Update version 1.0 (1).html

--- a/HTML/version 1.0 (1).html
+++ b/HTML/version 1.0 (1).html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<meta charset="UTF8">
-			<link rel="stylesheet" href="\SegrysProject\CSS\style 1.0 (1).css">
+			<link rel="stylesheet" href="..\CSS\style 1.0 (1).css">
 		</head>
 		<body>
 			<h2 class='a1'><a href='version 1.0 (2.1).html' class='link1'>Зарегистрироваться</a> или <a href='version 1.0 (2.2).html' class='link1'>Войти в сеть</a>.</h2>
@@ -17,11 +17,11 @@
 						<span class='sp1'>Crimor16@mail.ru</span>
 					</h3>
 				</div>
-				<img src="\SegrysProject\Pictures\1.png" width="50%" height="10%"></img>
+				<img src="..\Pictures\1.png" width="50%" height="10%"></img>
 				<div class='div2'></div>
 				<h2 class='a3'>Бесплатно — без рекламы<br>и внутренних<br>покупок.</h2>
 			</div>
 			<a href='version 1.0 (2.1).html'><button class='button'>Начать экономить.</button></a>
-			<script src="\SegrysProject\JS\version 1.0 (1).js"></script>
+			<script src="..\JS\version 1.0 (1).js"></script>
 		</body>
 	</html>
