--- a/HTML/version 1.0 (2.1).html
+++ b/HTML/version 1.0 (2.1).html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<meta charset="UTF8">
-			<link rel="stylesheet" href="\SegrysProject\CSS\style 1.0 (2.1).css">
+			<link rel="stylesheet" href="..\CSS\style 1.0 (2.1).css">
 		</head>
 		<body>
 			<a href="version 1.0 (1).html"><button id='button1'>Вернуться на главную страницу.</button></a>
@@ -15,6 +15,6 @@
 			<input type='password' placeholder='Повторите пароль.' required id='text-3'>
 			<button id='button'>Создать аккаунт.</button><br>
 			<a href="version 1.0 (2.2).html"><span class="span-1">Уже есть аккаунт?</span></a>	
-			<script src="\SegrysProject\JS\version 1.0 (2.1).js"></script>
+			<script src="..\JS\version 1.0 (2.1).js"></script>
 		</body>
 	</html>
