Update version 1.0 (1).html

--- a/HTML/version 1.0 (1).html
+++ b/HTML/version 1.0 (1).html
@@ -5,7 +5,7 @@
 			<link rel="stylesheet" href="..\CSS\style 1.0 (1).css">
 		</head>
 		<body>
-			<h2 class='a1'><a href='version 1.0 (2.1).html' class='link1'>Зарегистрироваться</a> или <a href='version 1.0 (2.2).html' class='link1'>Войти в сеть</a>.</h2>
+			<h2 class='a1'><a href='..\HTML\version 1.0 (2.1).html' class='link1'>Зарегистрироваться</a> или <a href='..\HTML\version 1.0 (2.2).html' class='link1'>Войти в сеть</a>.</h2>
 			<div class='div2'></div>
 			<div class="div1">
 				<h1 class='a2'>Приложение ограничивает расходы на день и<br>помогает <span class='sp1'>перестать сливать зарплату на пустяки</span>.</h1>
@@ -21,7 +21,7 @@
 				<div class='div2'></div>
 				<h2 class='a3'>Бесплатно — без рекламы<br>и внутренних<br>покупок.</h2>
 			</div>
-			<a href='version 1.0 (2.1).html'><button class='button'>Начать экономить.</button></a>
+			<a href='..\HTML\version 1.0 (2.1).html'><button class='button'>Начать экономить.</button></a>
 			<script src="..\JS\version 1.0 (1).js"></script>
 		</body>
 	</html>
