Update version 1.0 (2.1).html

--- a/HTML/version 1.0 (2.1).html
+++ b/HTML/version 1.0 (2.1).html
@@ -14,7 +14,7 @@
 			<span class='h2'>Обязательное поле.</span>
 			<input type='password' placeholder='Повторите пароль.' required id='text-3'>
 			<button id='button'>Создать аккаунт.</button><br>
-			<a href="version 1.0 (2.2).html"><span class="span-1">Уже есть аккаунт?</span></a>	
+			<a href="..\HTML\version 1.0 (2.2).html"><span class="span-1">Уже есть аккаунт?</span></a>	
 			<script src="..\JS\version 1.0 (2.1).js"></script>
 		</body>
 	</html>
