Update version 1.0 (1).html

--- a/HTML/version 1.0 (1).html
+++ b/HTML/version 1.0 (1).html
@@ -17,7 +17,7 @@
 						<span class='sp1'>Crimor16@mail.ru</span>
 					</h3>
 				</div>
-				<img src="..\Pictures\1.png" width="50%" height="10%"></img>
+				<img src="..\Pictures\П4.1.png" width="50%" height="10%"></img>
 				<div class='div2'></div>
 				<h2 class='a3'>Бесплатно — без рекламы<br>и внутренних<br>покупок.</h2>
 			</div>
