Update version 1.0 (3).html

--- a/HTML/version 1.0 (3).html
+++ b/HTML/version 1.0 (3).html
@@ -24,9 +24,9 @@
 			<div id='div1'>
 			</div>
 			<div id='div2'>
-				<textarea id="text-2" placeholder="Введите кол-во денег потраченные сегодня."></textarea>
+				<textarea id="text-2" placeholder="Введите деньги которые вы потратили на что-либо."></textarea>
 				<button id="button-3">Подтвердить.</button>
 			</div>
-			<script src="..\JS\version 1.0 (3).js"></script>	
+			<script src="..\JS\version 1.0 (4).js"></script>	
 		</body>
 	</html>
