Update version 1.0 (3).html

--- a/HTML/version 1.0 (3).html
+++ b/HTML/version 1.0 (3).html
@@ -24,7 +24,7 @@
 			<div id='div1'>
 			</div>
 			<div id='div2'>
-				<textarea id="text-2" placeholder="Введите деньги которые вы потратили на что-либо."></textarea>
+				<textarea id="text-2" placeholder="Введите сумму которые вы потратили за день."></textarea>
 				<button id="button-3">Подтвердить.</button>
 			</div>
 			<script src="..\JS\version 1.0 (3).js"></script>	
